Update notebooks section design and demos

--- a/demo/render.html
+++ b/demo/render.html
@@ -152,6 +152,34 @@
                     "content": "This is a section heading before the cards",
                     "email": "sbeleidy90@gmail.com",
                     "subject": "Poly-me contact form submission"
+                  },
+                  {
+                    "title": "Google Form",
+                    "type": "googleForm",
+                    "link": "https://docs.google.com/forms/d/e/1FAIpQLScRdspVcg_wUAGO5aOGlKTAnpNJ8PLnHI72mGgVczfDeatAAg/viewform"
+                  },
+                  {
+                    "title": "One Notebook",
+                    "type": "jupyterNotebooks",
+                    "onlyOne": true,
+                    "link": "https://raw.githubusercontent.com/ehmatthes/intro_programming/master/notebooks/index.ipynb"
+                  },
+                  {
+                    "title": "Multiple Notebooks",
+                    "type": "jupyterNotebooks",
+                    "onlyOne": false,
+                    "links": [
+                      {
+                        "name": "Introduction To Python",
+                        "link": "https://raw.githubusercontent.com/ehmatthes/intro_programming/master/notebooks/index.ipynb",
+                        "description": "A short intro to one of the most popular programming languages today."
+                      },
+                      {
+                        "name": "Python For Developers",
+                        "link": "https://raw.githubusercontent.com/ricardoduarte/python-for-developers/master/Chapter1/Chapter1_Introduction.ipynb",
+                        "description": "Chapter 1 of Python For Developers"
+                      }
+                    ]
                   }
                 ]
               },
