--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
-    <iron-component-page src="poly-me.html"></iron-component-page>
+    <iron-component-page src="demos.html"></iron-component-page>
   </body>
 </html>
