--- a/poly-me-render.html
+++ b/poly-me-render.html
@@ -115,12 +115,13 @@ Please see each section's documentation for more information.
         margin: auto;
       }
 
-      .tabs-div, .center-div {
-        background-color: var(--primary-color, darkblue);
+      .tabs-div {
+        background-color: var(--primary-color, lightgrey);
       }
 
       .center-div {
         background-size: cover;
+        background-color: var(--bg-color, white);
         background-image: var(--bg-image);
       }
     </style>
@@ -196,13 +197,13 @@ Please see each section's documentation for more information.
 
       _update: function(newData,oldData){
         try{
-          this.customStyle['--primary-color'] = newData.settings.primaryColor == null ? 'blue' : newData.settings.primaryColor;
+          this.customStyle['--primary-color'] = newData.settings.primaryColor == null ? 'lightgrey' : newData.settings.primaryColor;
           this.customStyle['--bg-image'] = "url('"+newData.content.backgroundImage + "')";
           this.customStyle['--paper-tabs-selection-bar-color'] = newData.settings.primaryColor == null ? 'green' : newData.settings.tabBarColor;
           this.updateStyles();
         }catch (e){
           console.log(e);
-          this.customStyle['--primary-color'] = 'blue';
+          this.customStyle['--primary-color'] = 'lightgrey';
           this.customStyle['--paper-tabs-selection-bar-color'] = 'green';
           this.updateStyles();
 
