feat: add contact section editor

--- a/poly-me-editor.html
+++ b/poly-me-editor.html
@@ -156,15 +156,9 @@ Usage Example:
           newSection = {
             "title": "Contact",
             "type": "contact",
-            "content": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eleifend porttitor dapibus. Fusce vulputate eget nisl in venenatis. Aliquam faucibus tristique lorem ut efficitur. Nam venenatis tellus ac gravida cursus. Mauris volutpat condimentum finibus. Nullam efficitur tempor felis eget varius.",
-            "sections": [
-              {
-                "title": "Awesome 1",
-                "image": "img/background.jpeg",
-                "content": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eleifend porttitor dapibus. Fusce vulputate eget nisl in venenatis. Aliquam faucibus tristique lorem ut efficitur."
-              }
-            ],
-            "lowerContent": "This is the end of the section."
+            "content": "This section appears at the top.",
+            "email": "example@example.com",
+            "subject": "Email from Poly-Me"
           }
         } else if(sectionType == "googleForm"){
           newSection = {
