--- a/poly-me-section-editor.html
+++ b/poly-me-section-editor.html
@@ -2,7 +2,7 @@
 
 <link rel="import" href="editors/cards-section-editor.html">
 <link rel="import" href="editors/content-section-editor.html">
-<!--<link rel="import" href="editors/contact-section-editor.html">-->
+<link rel="import" href="editors/contact-section-editor.html">
 <link rel="import" href="editors/dated-section-editor.html">
 <!--<link rel="import" href="editors/google-form-section-editor.html">-->
 <!--<link rel="import" href="editors/jupyter-notebooks-section-editor.html">-->
